fix social icon stretch

--- a/components/NavItem.module.css
+++ b/components/NavItem.module.css
@@ -1,6 +1,8 @@
 a.navItem,
 a.currentNavItem {
   display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: Lato;
   font-size: 2.5rem;
   color: #271f6b;
